Add Acces token

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-myconnection": "^1.0.4",
     "fs": "0.0.1-security",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.6.0",
     "moment": "^2.24.0",
