--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ build/Release
 node_modules/
 jspm_packages/
 public/
+config/config.js
 
 # TypeScript v1 declaration files
 typings/
@@ -74,6 +75,7 @@ typings/
 .env
 .env.test
 env.json
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
